StringImpl::reverseFind() with a single match character isn't optimal for mixed 8/16 bit cases https://bugs.webkit.org/show_bug.cgi?id=99363

Reviewed by Benjamin Poulain.

Factored out the 8/16 bitness check of the match character from the subject character bitness
check.  Did this for both find() and reverseFind().  Added all UChar/LChar combinations to the
inline reverseFind().

* wtf/text/StringImpl.cpp:
(WTF::StringImpl::find):
(WTF::StringImpl::reverseFind):
* wtf/text/StringImpl.h:
(WTF::reverseFind):


Canonical link: https://commits.webkit.org/117486@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131524 268f45cc-cd09-0410-ab3c-d52691b4dbfc